--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2018"
 [dependencies]
 bytes = "0.5"
 thiserror = "1.0"
+log = "0.4"
 
 [dev-dependencies]
 anyhow = "1.0"
+env_logger = "0.7.1"
